--- a/web_2110/css/style_ga.css
+++ b/web_2110/css/style_ga.css
@@ -67,19 +67,18 @@ a{
 main{
     padding: 10px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: rgba(255, 251, 255, 0.541);
-    flex-wrap: wrap;
-    height: 700px;
+    height: 1500px;
 }
 
 .main_description{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap:wrap;
     justify-content: center;
     flex-grow: 1;
-    flex-shrink: 2;
+    flex-shrink: 1;
     flex-basis: 25%;
 }
 
@@ -91,31 +90,13 @@ main{
     font-family: 'Lobster';
     padding: 30px 10px 10px 10px;
     color:rgb(121, 55, 25);
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
-#descricao{
-    text-align: justify;
-    font-family: 'Arima Medium';
-    font-weight: 500;
-    padding: 10px 150px;
-    color:rgb(121, 55, 25);
-}
-
-.main_img{
-    flex-grow: 1;
-    flex-shrink: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-basis: 25%;
-}
-
-#conf_foto{
-    height: 650px;
-    width: 500px;
-    border-radius: 20px;
-    box-shadow: 1px 1px 10px rgb(121, 55, 25);
+#fotogaleria{
+    height: 300px;
+    width: 400px;
+    padding: 10px 40px;
 }
 
 footer{
@@ -124,7 +105,7 @@ footer{
     flex-direction: column;
     padding: 15px;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-start;
     border-top: 2px solid rgb(160, 124, 146);
 }
 
@@ -132,7 +113,6 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 10px 0px;
     font-weight: 500;
     flex-basis: 100%;
@@ -149,19 +129,14 @@ footer{
         flex-direction: column;
 
     }
-    #descricao{
-        padding: 20px 10px;
-    }
-
-    #conf_foto{
-        height: 400px;
-        width: 300px;
-    }
-
     main{
-        height: 1000px;
+        height: 3000px;
         padding: 10px;
 
     }
+    #fotogaleria{
+        padding: 10px 20px;
+        width: 300px;
+        height: 200px;
+    }
 }
-    
