--- a/web_2110/css/style_hi.css
+++ b/web_2110/css/style_hi.css
@@ -67,7 +67,6 @@ a{
 main{
     padding: 10px;
     display: flex;
-    flex-direction: row;
     background-color: rgba(255, 251, 255, 0.541);
     flex-wrap: wrap;
     height: 700px;
@@ -79,8 +78,8 @@ main{
     align-items: center;
     justify-content: center;
     flex-grow: 1;
-    flex-shrink: 2;
-    flex-basis: 25%;
+    flex-shrink: 1;
+    flex-basis: 100%;
 }
 
 #titulo{
@@ -102,29 +101,13 @@ main{
     color:rgb(121, 55, 25);
 }
 
-.main_img{
-    flex-grow: 1;
-    flex-shrink: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-basis: 25%;
-}
-
-#conf_foto{
-    height: 650px;
-    width: 500px;
-    border-radius: 20px;
-    box-shadow: 1px 1px 10px rgb(121, 55, 25);
-}
-
 footer{
     background-color: rgb(202, 167, 199);
     display: flex;
     flex-direction: column;
     padding: 15px;
     align-items: center;
-    justify-content: end;
+    justify-content: center;
     border-top: 2px solid rgb(160, 124, 146);
 }
 
@@ -132,7 +115,6 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 10px 0px;
     font-weight: 500;
     flex-basis: 100%;
@@ -153,15 +135,9 @@ footer{
         padding: 20px 10px;
     }
 
-    #conf_foto{
-        height: 400px;
-        width: 300px;
-    }
-
     main{
-        height: 1000px;
-        padding: 10px;
+        height: 2000px;
+        padding: 10pxpx;
 
     }
 }
-    
