--- a/web_2110/css/style.css
+++ b/web_2110/css/style.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    padding: 0;
 }
 
 @font-face {
@@ -60,6 +61,10 @@ nav{
     flex-basis: 100%;
 }
 
+#botao-menu{
+    display: none;
+}
+
 a{
     text-decoration: none;
     color: rgb(121, 55, 25);
@@ -70,7 +75,7 @@ main{
     display: flex;
     background-color: rgba(255, 251, 255, 0.541);
     flex-wrap: wrap;
-    height: 700px;
+    height: auto;
 }
 
 .main_description{
@@ -98,9 +103,11 @@ main{
     text-align: justify;
     font-family: 'Arima Medium';
     font-weight: 500;
-    padding: 10px 150px;
+    padding: 20px 150px;
     color:rgb(121, 55, 25);
 }
+
+
 
 footer{
     background-color: rgb(202, 167, 199);
@@ -116,7 +123,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px 0px;
+    padding: 20px 0px;
     font-weight: 500;
     flex-basis: 100%;
 }
@@ -126,19 +133,36 @@ footer{
     height: 50px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 800px) {
+
+   #itens{
+        display: block;
+    }
+
+    #botao-menu{
+        display: block;
+        background-color: beige;
+        text-align: start;
+        padding: 3%;
+        cursor: pointer;
+    }
+
+    #botao-menu:hover{
+        background-color: rgb(228, 228, 194);
+    }
 
     .cabecalho{
         flex-direction: column;
-
     }
+
     #descricao{
-        padding: 20px 10px;
+        padding: 5px 15px;
+        
     }
 
     main{
-        height: 2000px;
-        padding: 10pxpx;
+        height: auto;
+        padding: 10px;
 
     }
 }
