--- a/web_2110/css/style_ho.css
+++ b/web_2110/css/style_ho.css
@@ -84,7 +84,7 @@ main{
     flex-basis: 25%;
 }
 
-#titulo{
+#titulo-main{
     display: flex;
     justify-content: center;
     align-items: center;
