--- a/web_2110/css/style.css
+++ b/web_2110/css/style.css
@@ -78,7 +78,7 @@ main{
     height: auto;
 }
 
-.main_description{
+.description-historia{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,7 +88,28 @@ main{
     flex-basis: 100%;
 }
 
+.main_description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-shrink: 2;
+    flex-basis: 25%;
+}
+
 #titulo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-family: 'Lobster';
+    padding: 30px 10px 10px 10px;
+    color:rgb(121, 55, 25);
+    padding-bottom: 10px;
+}
+
+#titulo-main{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -107,7 +128,37 @@ main{
     color:rgb(121, 55, 25);
 }
 
+.main_img{
+    flex-grow: 1;
+    flex-shrink: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 25%;
+}
 
+.main-fotos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap:wrap;
+    justify-content: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 25%;
+}
+
+#fotogaleria{
+    height: 300px;
+    width: 400px;
+    padding: 10px 40px;
+}
+
+#conf_foto{
+    height: 650px;
+    width: 500px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 10px rgb(121, 55, 25);
+}
 
 footer{
     background-color: rgb(202, 167, 199);
@@ -155,9 +206,17 @@ footer{
         flex-direction: column;
     }
 
+    #description-historia{
+        padding: 5px 20px;
+    }
+
     #descricao{
-        padding: 5px 15px;
-        
+        padding: 20px 10px;
+    }
+
+    #conf_foto{
+        height: 400px;
+        width: 300px;
     }
 
     main{
