--- a/web_2110/css/style.css
+++ b/web_2110/css/style.css
@@ -78,6 +78,14 @@ main{
     height: auto;
 }
 
+main .galeria{
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(255, 251, 255, 0.541);
+    height: auto;
+}
+
 .description-historia{
     display: flex;
     flex-direction: column;
@@ -153,12 +161,73 @@ main{
     padding: 10px 40px;
 }
 
+#titulo-galery{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 40px;
+    font-family: 'Lobster';
+    padding: 30px 10px 10px 10px;
+    color:rgb(121, 55, 25);
+    padding-bottom: 20px;
+}
+
 #conf_foto{
     height: 650px;
     width: 500px;
     border-radius: 20px;
     box-shadow: 1px 1px 10px rgb(121, 55, 25);
 }
+
+.form{
+    padding: 30px 0px;
+    flex-basis: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+fieldset{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 510px;
+    height: 480px;
+    padding: 0px 30px;
+}
+legend{
+    font-size: 25px;
+    font-weight: 700;
+}
+label{
+    font-size: 17px;
+}
+#telefone, #fnome, #email {
+    width: 500px;
+    height: 25px;
+}
+#mensagem{
+    width: 502px;
+    height: 100px;
+}
+button{
+    display: flex;
+    justify-content: center;
+    height: 23px;
+    width: 508px;
+    font-weight: 600;
+}
+.mapa{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 50%
+}
+
 
 footer{
     background-color: rgb(202, 167, 199);
@@ -222,6 +291,29 @@ footer{
     main{
         height: auto;
         padding: 10px;
+    }
 
+    #fotogaleria{
+        padding: 10px 20px;
+        width: 300px;
+        height: 200px;
+    }
+
+    fieldset{
+        width: 230px;
+    }
+    #telefone, #fnome, #email {
+        width: 220px;
+    }
+    button{
+        width: 227px;
+    }
+    #mensagem{
+        width: 222px;
+    }
+
+    .mapa{
+        width: 300px;
+        height: auto;
     }
 }
